Clean up the plugins a little bit